--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddHandiwork.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddHandiwork.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableView?>
@@ -58,17 +59,14 @@
                               <Font name="Roboto Medium" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txfEstado">
+                        <ComboBox fx:id="CmbEstado" prefHeight="26.0" prefWidth="199.0">
                            <HBox.margin>
-                              <Insets left="50.0" top="19.0" />
+                              <Insets left="50.0" top="20.0" />
                            </HBox.margin>
-                           <font>
-                              <Font name="Roboto" size="17.0" />
-                           </font>
-                        </TextField>
+                        </ComboBox>
                      </children>
                   </HBox>
-                  <HBox prefHeight="49.0" prefWidth="1058.0" VBox.vgrow="SOMETIMES">
+                  <HBox prefHeight="72.0" prefWidth="1234.0" VBox.vgrow="SOMETIMES">
                      <children>
                         <Label text="Nombres" wrapText="true">
                            <font>
@@ -102,12 +100,31 @@
                               <Font name="Roboto" size="17.0" />
                            </font>
                         </TextField>
+                        <Label text="Fecha">
+                           <font>
+                              <Font name="Roboto Medium" size="20.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="50.0" top="10.0" />
+                           </HBox.margin>
+                        </Label>
+                        <TextField fx:id="TxfDate" editable="false" layoutX="604.0" layoutY="20.0" maxWidth="-Infinity" prefColumnCount="10" prefHeight="38.0" prefWidth="203.0">
+                           <font>
+                              <Font name="Roboto" size="17.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="50.0" top="10.0" />
+                           </HBox.margin>
+                        </TextField>
                      </children>
                   </HBox>
                </children>
                <VBox.margin>
                   <Insets left="15.0" right="15.0" top="20.0" />
                </VBox.margin>
+               <padding>
+                  <Insets bottom="20.0" />
+               </padding>
             </VBox>
             <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="65.0" prefWidth="995.0">
                <children>
@@ -176,7 +193,7 @@
                                     <Font name="Roboto" size="22.0" />
                                  </font>
                               </Label>
-                              <TextField fx:id="txfCostoTotal">
+                              <TextField fx:id="txfCostoTotal" editable="false">
                                  <font>
                                     <Font name="Roboto" size="20.0" />
                                  </font>
