--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddHandiwork.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddHandiwork.fxml
@@ -7,8 +7,10 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
 <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" nodeOrientation="LEFT_TO_RIGHT" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller_Pages.AddHandiworkController">
@@ -158,14 +160,24 @@
                   <Insets right="200.0" top="20.0" />
                </VBox.margin>
             </VBox>
-            <VBox prefHeight="437.0" prefWidth="1396.0" style="-fx-alignment: center;" VBox.vgrow="SOMETIMES">
+            <VBox alignment="TOP_CENTER" prefHeight="290.0" prefWidth="1396.0" style="-fx-alignment: center;" VBox.vgrow="SOMETIMES">
                <children>
-                  <TableView fx:id="Table" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="372.0" prefWidth="1243.0">
+                  <TableView fx:id="Table" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="268.0" prefWidth="1243.0">
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color opacity="0.1306990534067154" />
+                           </color>
+                        </DropShadow>
+                     </effect>
                   </TableView>
-                  <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="74.0" prefWidth="1172.0">
+                  <HBox alignment="TOP_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="74.0" prefWidth="1243.0">
                      <children>
                         <Button fx:id="btnCancel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#closeDialog" prefHeight="36.0" prefWidth="132.0" text="Regresar" textFill="#c90a0a">
                            <HBox.margin>
@@ -175,40 +187,81 @@
                               <Font name="Roboto Black" size="20.0" />
                            </font>
                         </Button>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="36.0" prefWidth="132.0" text="Guardar" textFill="#0bd72d">
+                        <Button fx:id="BtbUpdateHandiwork" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#updateHandiwork" prefHeight="36.0" prefWidth="132.0" text="Guardar" textFill="#0bd72d">
                            <font>
                               <Font name="Roboto Black" size="20.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="200.0" top="20.0" />
+                              <Insets left="100.0" right="100.0" top="20.0" />
                            </HBox.margin>
                         </Button>
-                        <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="74.0" prefWidth="451.0" style="-fx-border-width: 1px; -fx-border-color: black;">
+                        <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Label text="Total Acumulado">
-                                 <HBox.margin>
-                                    <Insets left="10.0" right="20.0" top="10.0" />
-                                 </HBox.margin>
-                                 <font>
-                                    <Font name="Roboto" size="22.0" />
-                                 </font>
-                              </Label>
-                              <TextField fx:id="txfCostoTotal" editable="false">
-                                 <font>
-                                    <Font name="Roboto" size="20.0" />
-                                 </font>
-                                 <HBox.margin>
-                                    <Insets top="10.0" />
-                                 </HBox.margin>
-                              </TextField>
+                              <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="47.0" prefWidth="451.0">
+                                 <children>
+                                    <Label text="Pagado">
+                                       <HBox.margin>
+                                          <Insets left="10.0" right="20.0" top="10.0" />
+                                       </HBox.margin>
+                                       <font>
+                                          <Font size="20.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField fx:id="TxfPagado" editable="false" maxHeight="30.0" prefHeight="10.0" prefWidth="250.0">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                    </TextField>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="57.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="47.0" prefWidth="451.0">
+                                 <children>
+                                    <Label text="Por pagar">
+                                       <HBox.margin>
+                                          <Insets left="10.0" right="20.0" top="10.0" />
+                                       </HBox.margin>
+                                       <font>
+                                          <Font size="20.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField fx:id="txfPorPagar" editable="false" maxHeight="30.0" prefHeight="10.0" prefWidth="250.0">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                    </TextField>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="47.0" prefWidth="451.0">
+                                 <children>
+                                    <Label text="Total">
+                                       <HBox.margin>
+                                          <Insets left="10.0" right="20.0" top="10.0" />
+                                       </HBox.margin>
+                                       <font>
+                                          <Font size="20.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField fx:id="txfCostoTotal" editable="false" maxHeight="30.0" prefHeight="10.0" prefWidth="250.0">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                    </TextField>
+                                 </children>
+                              </HBox>
                            </children>
-                           <HBox.margin>
-                              <Insets left="200.0" />
-                           </HBox.margin>
-                        </HBox>
+                        </VBox>
                      </children>
                      <VBox.margin>
-                        <Insets top="20.0" />
+                        <Insets top="5.0" />
                      </VBox.margin>
                   </HBox>
                </children>
