--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/PrincipalHome.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/PrincipalHome.fxml
@@ -29,7 +29,7 @@
          <content>
             <VBox maxWidth="1.7976931348623157E308" prefHeight="762.0" prefWidth="1494.0" style="-fx-alignment: center;">
                <children>
-                  <Label text="Telas Company">
+                  <Label text="Obras pendientes o por pagar">
                      <font>
                         <Font name="Roboto Black" size="30.0" />
                      </font>
@@ -66,7 +66,7 @@
                     <columns>
                         <TableColumn fx:id="TcCiRuc" prefWidth="137.5999984741211" text="Cédula" />
                         <TableColumn fx:id="TcNames" prefWidth="64.0" text="Nombres" />
-                      <TableColumn fx:id="TcHanId" prefWidth="481.5999755859375" text="Obra" />
+                      <TableColumn fx:id="TcHanDate" prefWidth="481.5999755859375" text="Fecha" />
                         <TableColumn fx:id="TcPaymentStatus" prefWidth="75.0" text="Estado del pago" />
                         <TableColumn fx:id="TcHanState" minWidth="0.0" prefWidth="224.5333251953125" text="Estado de la obra" />
                       <TableColumn fx:id="TcTotalHanCost" minWidth="0.0" prefWidth="179.73318481445312" text="Precio Total" />
@@ -118,7 +118,7 @@
                                     </Label>
                                  </children>
                               </Pane>
-                              <Button id="btnAddProject" alignment="CENTER" layoutX="29.0" layoutY="72.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="239.0" styleClass="roundButton" stylesheets="@../css/styles.css" text="Abrir" textAlignment="CENTER" />
+                              <Button id="btnAddProject" alignment="CENTER" layoutX="30.0" layoutY="72.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="239.0" styleClass="roundButton" stylesheets="@../css/styles.css" text="Abrir" textAlignment="CENTER" />
                            </children>
                            <HBox.margin>
                               <Insets left="50.0" />
